--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
             <img class= black_die_img id= "black_die5_img" src="peach.png" onmousedown="clicked_die(5);">
         </div>
 
-        <button id= "start_button" onclick="startGame();" type="button">Start Game!</button>
-        <button id= "roll_button" onclick="rollDice();" type="button">Roll Dice</button>
-        <button id= "display_button" onclick="displayDice();" type="button">Display Dice</button>
-        <button id= "reroll_button" onclick="rerollDice();" type="button">Reroll Dice</button>
+        <div id = "buttons">
+            <button class= "button" id= "start_button" onclick="startGame();" type="button">Start Game!</button>
+            <button class= "button" id= "roll_button" onclick="rollDice();" type="button">Roll Dice</button>
+            <button class= "button" id= "display_button" onclick="displayDice();" type="button">Display Dice</button>
+            <button class= "button" id= "reroll_button" onclick="rerollDice();" type="button">Reroll Dice</button>
+        </div>
 
         <script src="perudo_game.js"></script>
 
