dudo button presser shows up on page

--- a/static/index.html
+++ b/static/index.html
@@ -66,6 +66,7 @@
         <button class="button" id="display_button" onclick="displayDice();" type="button">Display Dice</button>
         <button class="button" id="reroll_button" onclick="rerollDice();" type="button">Reroll Dice</button>
         <button class="button" id="dudo_button" onclick="dudo();" type="button">Dudo</button>
+        <p id='dudoMessage'></p>
     </div>
 
     <script src="/static/perudo_game.js"></script>
