Adding display dice

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 
-<body>
+<body onload="updateGameInterval();">
     <div id="red_player">
         <img class=cup id="red_cup" src="/static/resources/cups/red_cup.png" onclick="clicked_cup(0);">
         <img class=red_die_img id="red_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
