--- a/static/index.html
+++ b/static/index.html
@@ -6,59 +6,60 @@
 </head>
 
 <body onload="updateGameInterval();">
-    <div id="red_player">
-        <img class=cup id="red_cup" src="/static/resources/cups/red_cup.png" onclick="clicked_cup(0);">
-        <img class=red_die_img id="red_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
-        <img class=red_die_img id="red_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
-        <img class=red_die_img id="red_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(3);">
-        <img class=red_die_img id="red_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(4);">
-        <img class=red_die_img id="red_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
-    </div>
+        <div id="red_player">
+            <img class=cup id="red_cup" src="/static/resources/cups/red_cup.png" onclick="clicked_cup(0); insertCup('red_player');">
+            <img class=red_die_img id="red_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
+            <img class=red_die_img id="red_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
+            <img class=red_die_img id="red_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(3);">
+            <img class=red_die_img id="red_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(4);">
+            <img class=red_die_img id="red_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
+        </div>
 
-    <div id="orange_player">
-        <img class=cup id="orange_cup" src="/static/resources/cups/orange_cup.png" onclick="clicked_cup(1);">
-        <img class=orange_die_img id="orange_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
-        <img class=orange_die_img id="orange_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
-        <img class=orange_die_img id="orange_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(3);">
-        <img class=orange_die_img id="orange_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(4);">
-        <img class=orange_die_img id="orange_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
-    </div>
+        <div id="orange_player">
+            <img class=cup id="orange_cup" src="/static/resources/cups/orange_cup.png" onclick="clicked_cup(1); insertCup('orange_player');">
+            <img class=orange_die_img id="orange_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
+            <img class=orange_die_img id="orange_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
+            <img class=orange_die_img id="orange_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(3);">
+            <img class=orange_die_img id="orange_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(4);">
+            <img class=orange_die_img id="orange_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
+        </div>
 
-    <div id="yellow_player">
-        <img class=cup id="yellow_cup" src="/static/resources/cups/yellow_cup.png" onclick="clicked_cup(2);">
-        <img class=yellow_die_img id="yellow_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
-        <img class=yellow_die_img id="yellow_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
-        <img class=yellow_die_img id="yellow_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(3);">
-        <img class=yellow_die_img id="yellow_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(4);">
-        <img class=yellow_die_img id="yellow_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
-    </div>
+        <div id="yellow_player">
+            <img class=cup id="yellow_cup" src="/static/resources/cups/yellow_cup.png" onclick="clicked_cup(2); insertCup('yellow_player');">
+            <img class=yellow_die_img id="yellow_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
+            <img class=yellow_die_img id="yellow_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
+            <img class=yellow_die_img id="yellow_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(3);">
+            <img class=yellow_die_img id="yellow_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(4);">
+            <img class=yellow_die_img id="yellow_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
+        </div>
 
-    <div id="green_player">
-        <img class=cup id="green_cup" src="/static/resources/cups/green_cup.png" onclick="clicked_cup(3);">
-        <img class=green_die_img id="green_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
-        <img class=green_die_img id="green_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
-        <img class=green_die_img id="green_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(3);">
-        <img class=green_die_img id="green_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(4);">
-        <img class=green_die_img id="green_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
-    </div>
+        <div id="green_player">
+            <img class=cup id="green_cup" src="/static/resources/cups/green_cup.png" onclick="clicked_cup(3); insertCup('green_player');">
+            <img class=green_die_img id="green_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
+            <img class=green_die_img id="green_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
+            <img class=green_die_img id="green_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(3);">
+            <img class=green_die_img id="green_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(4);">
+            <img class=green_die_img id="green_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
+        </div>
 
-    <div id="blue_player">
-        <img class=cup id="blue_cup" src="/static/resources/cups/blue_cup.png" onclick="clicked_cup(4);">
-        <img class=blue_die_img id="blue_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
-        <img class=blue_die_img id="blue_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
-        <img class=blue_die_img id="blue_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(3);">
-        <img class=blue_die_img id="blue_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(4);">
-        <img class=blue_die_img id="blue_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
-    </div>
+        <div id="blue_player">
+            <img class=cup id="blue_cup" src="/static/resources/cups/blue_cup.png" onclick="clicked_cup(4); insertCup('blue_player');">
+            <img class=blue_die_img id="blue_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
+            <img class=blue_die_img id="blue_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
+            <img class=blue_die_img id="blue_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(3);">
+            <img class=blue_die_img id="blue_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(4);">
+            <img class=blue_die_img id="blue_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
+        </div>
 
-    <div id="black_player">
-        <img class=cup id="black_cup" src="/static/resources/cups/black_cup.png" onclick="clicked_cup(5);">
-        <img class=black_die_img id="black_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
-        <img class=black_die_img id="black_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
-        <img class=black_die_img id="black_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(3);">
-        <img class=black_die_img id="black_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(4);">
-        <img class=black_die_img id="black_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
-    </div>
+        <div id="black_player">
+            <img class=cup id="black_cup" src="/static/resources/cups/black_cup.png" onclick="clicked_cup(5); insertCup('black_player');">
+            <img class=black_die_img id="black_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
+            <img class=black_die_img id="black_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
+            <img class=black_die_img id="black_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(3);">
+            <img class=black_die_img id="black_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(4);">
+            <img class=black_die_img id="black_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
+        </div>
+    
 
     <div id="buttons">
         <button class="button" id="start_button" onclick="startGame();" type="button">Start Game!</button>
@@ -68,6 +69,8 @@
         <button class="button" id="dudo_button" onclick="dudo();" type="button">Dudo</button>
         <p id='dudoMessage'></p>
     </div>
+
+    <button id="order_button" onclick ="insertCup('yellow_player');" type="button">insert yellow player1!</button>
 
     <script src="/static/perudo_game.js"></script>
 
