Update cup positions according to rank

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,8 @@
 </head>
 
 <body onload="updateGameInterval();">
-        <div id="red_player">
+    <div id="wrapper">
+        <div id="red_player"> <input type="hidden" id="redRank" value="-1"> <input type="hidden" id="redPos" value="0">
             <img class=cup id="red_cup" src="/static/resources/cups/red_cup.png" onclick="clicked_cup(0); insertCup('red_player');">
             <img class=red_die_img id="red_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
             <img class=red_die_img id="red_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
@@ -15,7 +16,7 @@
             <img class=red_die_img id="red_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
         </div>
 
-        <div id="orange_player">
+        <div id="orange_player"> <input type="hidden" id="orangeRank" value="-1"> <input type="hidden" id="orangePos" value="1">
             <img class=cup id="orange_cup" src="/static/resources/cups/orange_cup.png" onclick="clicked_cup(1); insertCup('orange_player');">
             <img class=orange_die_img id="orange_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
             <img class=orange_die_img id="orange_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
@@ -24,7 +25,7 @@
             <img class=orange_die_img id="orange_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
         </div>
 
-        <div id="yellow_player">
+        <div id="yellow_player"> <input type="hidden" id="yellowRank" value="-1"> <input type="hidden" id="yellowPos" value="2">
             <img class=cup id="yellow_cup" src="/static/resources/cups/yellow_cup.png" onclick="clicked_cup(2); insertCup('yellow_player');">
             <img class=yellow_die_img id="yellow_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
             <img class=yellow_die_img id="yellow_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
@@ -33,7 +34,7 @@
             <img class=yellow_die_img id="yellow_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
         </div>
 
-        <div id="green_player">
+        <div id="green_player"> <input type="hidden" id="greenRank" value="-1"> <input type="hidden" id="greenPos" value="3">
             <img class=cup id="green_cup" src="/static/resources/cups/green_cup.png" onclick="clicked_cup(3); insertCup('green_player');">
             <img class=green_die_img id="green_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
             <img class=green_die_img id="green_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
@@ -42,7 +43,7 @@
             <img class=green_die_img id="green_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
         </div>
 
-        <div id="blue_player">
+        <div id="blue_player"> <input type="hidden" id="blueRank" value="-1"> <input type="hidden" id="bluePos" value="4">
             <img class=cup id="blue_cup" src="/static/resources/cups/blue_cup.png" onclick="clicked_cup(4); insertCup('blue_player');">
             <img class=blue_die_img id="blue_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
             <img class=blue_die_img id="blue_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
@@ -51,7 +52,7 @@
             <img class=blue_die_img id="blue_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
         </div>
 
-        <div id="black_player">
+        <div id="black_player"> <input type="hidden" id="blackRank" value="-1"> <input type="hidden" id="blackPos" value="5">
             <img class=cup id="black_cup" src="/static/resources/cups/black_cup.png" onclick="clicked_cup(5); insertCup('black_player');">
             <img class=black_die_img id="black_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1);">
             <img class=black_die_img id="black_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2);">
@@ -59,7 +60,7 @@
             <img class=black_die_img id="black_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(4);">
             <img class=black_die_img id="black_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5);">
         </div>
-    
+    </div>
 
     <div id="buttons">
         <button class="button" id="start_button" onclick="startGame();" type="button">Start Game!</button>
@@ -70,7 +71,7 @@
         <p id='dudoMessage'></p>
     </div>
 
-    <button id="order_button" onclick ="insertCup('yellow_player');" type="button">insert yellow player1!</button>
+    <button id="order_button" onclick ="insertCup('yellow_player');" type="button">Test update 13:48</button>
 
     <script src="/static/perudo_game.js"></script>
 
