Adding hover response

--- a/static/index.html
+++ b/static/index.html
@@ -100,11 +100,21 @@
     </div>
 
     <div id="buttons">
-        <button class="button" id="start_button" onclick="startGame();" type="button">Start Game!</button>
-        <button class="button" id="roll_button" onclick="rollDice();" type="button">Roll Dice</button>
-        <button class="button" id="display_button" onclick="displayDice();" type="button">Display Dice</button>
-        <button class="button" id="reroll_button" onclick="rerollDice();" type="button">Reroll Dice</button>
-        <button class="button" id="dudo_button" onclick="dudo();" type="button">Dudo</button>
+        <div id= "start_div">
+            <button class="button" id="start_button" onclick="startGame();" type="button">Start Game!</button>
+        </div>
+        <div id= "roll_div">
+            <button class="button" id="roll_button" onclick="rollDice();" type="button">Roll Dice</button>
+        </div>
+        <div id= "display_div">
+            <button class="button" id="display_button" onclick="displayDice();" type="button">Display Dice</button>
+        </div>
+        <div id= "reroll_div">
+            <button class="button" id="reroll_button" onclick="rerollDice();" type="button">Reroll Dice</button>
+        </div>
+        <div id= "dudo_div">
+            <button class="button" id="dudo_button" onclick="dudo();" type="button">Dudo</button>
+        </div>
         <p id='dudoMessage'></p>
     </div>
 
