Added preliminary bet support
Dont merge

--- a/static/index.html
+++ b/static/index.html
@@ -74,6 +74,11 @@
         <button class="button" id="display_button" onclick="displayDice();" type="button">Display Dice</button>
         <button class="button" id="reroll_button" onclick="rerollDice();" type="button">Reroll Dice</button>
         <button class="button" id="dudo_button" onclick="dudo();" type="button">Dudo</button>
+            <div><INPUT TYPE="NUMBER" button id = "numDice" MIN="1" MAX="30" STEP="1" VALUE="1" SIZE="100" style=><a id=numDiceText style=> Number of Dice</a>
+            <INPUT TYPE="NUMBER" button id = "diceFace" MIN="1" MAX="6" STEP="1" VALUE="2" SIZE="100" style=><a id=diceFaceText style=> Face of Dice</a>
+            <button class="button" id="bet_button" onclick="" type="button">Enter Bet</button>
+            </div>
+       
         <p id='dudoMessage'></p>
     </div>
 
