displaying game id

--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,8 @@
 <body onload="updateGameInterval();">
     
     <div id="wrapper">
+        <p id="game_id_display"></p>
+        
         <div class= "player_div" id="red_player"> <input type="hidden" id="redRank" value="-1"> <input type="hidden" id="redPos" value="0">
             <div class= "user_info" id= "red_user_info">
                 <p id="redUsername"> </p>
