Only allow host to start session

--- a/static/home.html
+++ b/static/home.html
@@ -14,6 +14,8 @@
     <p id="join_fail"></p>
   </div>    
 
+  <script src="/static/perudo_game.js"></script>
   <script src="/static/game_session_control.js"></script>
+  
 </body>
 </html>
