Adding title pic

--- a/static/home.html
+++ b/static/home.html
@@ -11,12 +11,11 @@
             <img id="title_image" src="/static/resources/title_text2.png" >
         </div>
         <div id="home_buttons_div">
-            <!-- <input class="text" type="text" id="session_id" placeholder="GAME ID" maxlength="4"> -->
             <div id="join_game_div">
-                <button class="button" id="join_game" onclick="joinGame();" type="button">Join Game</button>
-            </div>
-            <div id="new_game_div">
                 <button class="button" id="new_game" onclick="newGame();" type="button">Host New Game</button>
+                <br><br>
+                <input class="text" type="text" id="session_id" placeholder="GAME ID" maxlength="4">
+                <button class="button" id="join_game" onclick="joinGame();" type="button">Join Game</button>
             </div>
             <p id="join_fail"></p>
         </div>
