Added a lose button

--- a/static/index.html
+++ b/static/index.html
@@ -146,9 +146,9 @@
         </div>
 
         <div id= "start_session_div">
-            <button class="button2" id="start_session_button" onclick="start_session();" type="button">Start Session</button>
+            <button class="button2" id="start_session_button" onclick="start_session();" type="button">All Players Are In</button>
         </div>
-        
+
         <div id= "roll_div">
             <button class="button" id="roll_button" onclick="rollDice();" type="button">Roll Dice</button>
         </div>
@@ -208,10 +208,9 @@
             </div>
         </div>
 
-
+        <button id="lose_button" onclick="loseDie();" type="button">I lose a die</button>
         
-
-        <p id='dudoMessage'></p>
+        <!-- <p id='dudoMessage'></p> -->
     </div>
 
     <script src="/static/perudo_game.js"></script>
