changing location of avatars

--- a/static/index.html
+++ b/static/index.html
@@ -116,7 +116,7 @@
 
         <div class="player_div" id="black_player"> <input type="hidden" id="blackRank" value="-1"> <input type="hidden" id="blackPos" value="5">
             <div class="user_info" id="black_user_info">
-                <img class="player_pic" id="black_user_pic" src="/static/black_user.png">
+                <img class="player_pic" id="black_user_pic" src="/static/resources/user_avatars/black_user.png">
                 <p id="blackUsername"> </p>
             </div>
 
