--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 
-<body onload="makeAllPlayerUI(); updateGameInterval(); buildMouseFunctionality();">
+<body onload="setup_game()">
 
     <div id="wrapper">
 
@@ -109,6 +109,7 @@
 
         <script src="/static/perudo_game.js"></script>
         <script src="/static/home_page.js"></script>
+        <script src="/static/game_initialization.js"></script>
 
 </body>
 
